# tailor-your-cv

./: .gitignore  README.md  app.py  home.py  pyproject.toml  requirements.txt
pages/: manage_settings.py  my_submissions.py  new_submission.py  portfolio.py
support/: config_manager.py  extractor.py  file_manager.py  html_builder.py  load_models.py  logger_manager.py  manage_ingestion.py  settings.py  submission_manager.py  supportClasses.py  supportLLM.py
support/html_templates/: html_templates.py
test/: cover_letter.html  cover_letter.pkl  cv.html  final_cover_letter.pkl  final_cv.pkl  jd_info.pkl  new_cv.pkl  structured_cv.pkl  user_curriculum.md
