[project]
name = "tailor-your-cv"
version = "0.1.0"
description = "An AI tool that helps users craft customized Curriculum Vitae, based on job descriptions, highlighting relevant experiences using LLMs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-openai==0.3.18",
    "markitdown[all]==0.1.2",
    "pydantic==2.11.5",
    "streamlit==1.45.1",
    "weasyprint==65.1",
]
